# MultiGeoDTA

./: LICENSE  README.md  constants.py  dta.py  experiment.py  filter_vs_results.ipynb  metrics.py  model.py  mol_graph.py  parsing.py  pdbbind_utils.py  run_MultiGeoDTA.py  run_vs.py  test_MultiGeoDTA.py  utils.py
MultiGeoDTA/: .nfs00000000483824330000a82d  constants.py  dta.py  experiment.py  experiment_inference.py  gvp.py  model.py  mol_graph.py  parsing.py  pdb_graph.py  transformer.py
MultiGeoDTA_cc_fixed/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  setup_env.sh
MultiGeoDTA_cc_fixed/docs/: INSTALL.md
MultiGeoDTA_cc_fixed/examples/: custom_model.py  predict_binding_affinity.py  train_pdbbind.py
MultiGeoDTA_cc_fixed/multigeodta/: __init__.py  trainer.py
MultiGeoDTA_cc_fixed/multigeodta/configs/: __init__.py  default_config.py
MultiGeoDTA_cc_fixed/multigeodta/data/: __init__.py  constants.py  dataset.py  mol_graph.py  protein_graph.py
MultiGeoDTA_cc_fixed/multigeodta/models/: __init__.py  dta_model.py  encoders.py  gvp.py
MultiGeoDTA_cc_fixed/multigeodta/tasks/: __init__.py  pdbbind.py  virtual_screening.py
MultiGeoDTA_cc_fixed/multigeodta/utils/: __init__.py  early_stopping.py  logger.py  metrics.py  saver.py
MultiGeoDTA_cc_fixed/scripts/: inference.py  test.py  train.py
MultiGeoDTA_cc_fixed/tests/: test_model.py
create_dataset/: preprocess_mol_pkl.py  preprocess_pocket_pkl.py  readme.txt
create_dataset/code/: cal_DDE_features_2021.py  cal_protein_seq_length.py  change_filename.py  cluster_based_similarity.py  cons_mol_json.py  cons_pocket_json.py  copy_sdf_files.py  delete.py  extra_pdb_entry.py  extra_seq_info.py  readme.txt  split_dataset_from_similarity.py  split_dataset_from_time.py
create_dataset/huggingface_dataset/lp_pdbbind/: LP_PDBBind_test.csv  LP_PDBBind_valid.csv
create_dataset/huggingface_dataset/pdbbind_v2016/: last_test_2016.csv  last_train_2016.csv  last_valid_2016.csv
create_dataset/huggingface_dataset/pdbbind_v2016/code/: copy_sdf_file.py  delete_train_data.py
create_dataset/huggingface_dataset/pdbbind_v2020/: last_test_2020.csv  last_valid_2020.csv
create_dataset/pdbbind_v2016/: last_train_2016_missing_0.2.csv  last_train_2016_missing_0.4.csv  last_train_2016_missing_0.6.csv  last_train_2016_missing_0.8.csv  last_train_2016_noised_scale_0.2.csv  last_train_2016_noised_scale_0.4.csv  last_train_2016_noised_scale_0.6.csv  last_train_2016_noised_scale_0.8.csv  last_train_2016_noised_scale_1.0.csv
create_dataset/pdbbind_v2016/code/: cons_mol_json.py  cons_pocket_json.py  noise_label.py  predict_protein_structure.py
dock/: 01_convert_format.py  02_run_docking.py  03_postprocess_dock_results.py  5xra_8D3_3.pse  5xra_C_8D3.pdbqt  5xra_C_8D3.sdf  config.txt  docked_5xra_C_8D3.pdbqt  docking.ipynb
(+10 files in other folders)
